# crypto-quant-trading

./: .env  .gitignore  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  backtest_fn_main.py  main.py  pyproject.toml  step.md  todo.md
src/: __init__.py  account.py  backtest_fn.py  config.py  exchange_manager.py  execution.py  market_data.py  models.py  monitor_hl_address.py  risk.py  service.py  strategy.py  trading.py
src/account/: __init__.py  account.py  manager.py
src/core/: engine.py
src/data/: __init__.py  analyzer.py  exchange_manager.py  fetcher.py  indicators.py  models.py
src/scripts/: monitor.py  risk.py
src/strategy/: __init__.py  planner.py  regime.py  signals.py
src/tools/: api.py  performance.py  system_config.py  utils.py
