[project]
name = "crypto-quant-trading"
version = "0.1.0"
description = "OKX 交易所数据获取工具 - 结构化的量化交易数据获取系统"
requires-python = ">=3.8"
dependencies = [
    "ccxt>=4.0.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"

[project.scripts]
crypto-trading = "src.main:main"

[tool.hatchling.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38"]

