[project]
name = "crypto-quant-trading"
version = "0.1.0"
description = "OKX 交易所数据获取工具 - 结构化的量化交易数据获取系统"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"

# CLI entry point：终端运行 crypto-trading 会调用 main.py 里的 main()
[project.scripts]
crypto-trading = "main:main"

# 告诉 hatch：你的包代码放在 src/crypto_quant_trading
[tool.hatch.build.targets.wheel]
packages = ["src/crypto_quant_trading"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# UV 官方推荐的新写法
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38"]
