# =========================================================
# pyproject.toml
# 量化交易系统项目配置（可直接复制使用）
# =========================================================

# ---------------------------------------------------------
# 项目基础信息（PEP 621 标准）
# ---------------------------------------------------------
[project]

# 项目名称（pip / uv 安装、发布时使用）
name = "crypto-quant-trading"

# 项目版本号（语义化版本：主.次.补丁）
version = "1.0.0"

# 项目描述，仅用于说明，不影响运行
description = "量化交易系统"

# Python 运行版本要求
# 当前环境必须 >= 3.12 才能运行
requires-python = ">=3.12"

# 项目运行时依赖（生产环境依赖）
dependencies = [
    # 加密货币交易所统一接口库
    "ccxt>=4.5.28",

    # Hyperliquid 官方 Python SDK
    "hyperliquid-python-sdk>=0.21.0",

    # 数据分析核心库
    "pandas>=2.3.3",

    # 技术指标库（TA：ADX / ATR / RSI 等）
    "pandas-ta>=0.4.71b0",

    # 加载 .env 环境变量文件
    "python-dotenv>=1.0.0",
]

# 项目说明文档（发布到 PyPI 时展示）
readme = "README.md"

# ---------------------------------------------------------
# CLI 命令入口配置
# ---------------------------------------------------------
[project.scripts]

# 在终端执行：
#   crypto-trading
# 等价于：
#   python main.py
# 实际调用 main.py 文件中的 main() 函数
crypto-trading = "main:main"

# ---------------------------------------------------------
# 构建配置（hatch + src 目录结构）
# ---------------------------------------------------------
[tool.hatch.build.targets.wheel]

# 告诉 hatch：Python 包代码所在路径
# 对应目录：src/crypto_quant_trading/
packages = ["src/crypto_quant_trading"]

# ---------------------------------------------------------
# 可选依赖（传统 extras 写法，兼容 pip）
# ---------------------------------------------------------
[project.optional-dependencies]

# 开发环境依赖（测试 / 格式化 / Lint）
dev = [
    # 单元测试框架
    "pytest>=7.0.0",

    # 代码自动格式化工具
    "black>=23.0.0",

    # 高性能代码检查工具（Lint）
    "ruff>=0.1.0",
]

# ---------------------------------------------------------
# UV 官方推荐的新写法（dependency-groups）
# ---------------------------------------------------------
[dependency-groups]

# 与 optional-dependencies.dev 含义一致
# UV 会优先使用这里
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# ---------------------------------------------------------
# 构建系统声明（PEP 517 / 518）
# ---------------------------------------------------------
[build-system]

# 构建项目时需要的工具
requires = ["hatchling"]

# 使用 hatchling 作为构建后端
build-backend = "hatchling.build"

# ---------------------------------------------------------
# Ruff 代码检查配置
# ---------------------------------------------------------
[tool.ruff]

# 每行最大字符数
line-length = 100

# 代码目标 Python 版本（用于规则判断）
target-version = "py38"

# ---------------------------------------------------------
# Ruff Lint 规则选择
# ---------------------------------------------------------
[tool.ruff.lint]

# 启用的规则集：
# E: PEP8 错误
# F: 潜在 Bug（未使用变量等）
# I: import 排序
# N: 命名规范
# W: 警告
select = ["E", "F", "I", "N", "W"]

# 忽略的规则：
# E501：单行过长（由 Black 控制）
ignore = ["E501"]

# ---------------------------------------------------------
# Black 代码格式化配置
# ---------------------------------------------------------
[tool.black]

# 与 Ruff 保持一致的行长度
line-length = 100

# Black 生成的代码兼容的 Python 版本
target-version = ["py38"]
